# jupyterlab-h5web

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  CONTRIBUTING.md  MANIFEST.in  README.md  eslint.config.mjs  example.ipynb  install.json  package-lock.json  package.json  pyproject.toml  requirements_release.txt  setup.py  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_jlab2.yml  build_jlab3.yml  legacy_build.yml  lint.yml  release.yml
binder/: environment.yml  postBuild
jupyter-config/nb-config/: jupyterlab_h5web.json
jupyter-config/server-config/: jupyterlab_h5web.json
jupyterlab_h5web/: __init__.py  _version.py  handlers.py  utils.py  widget.py
src/: H5WebApp.tsx  H5WebInCell.tsx  H5WebWidget.tsx  H5WebWidgetFactory.ts  H5webApp.tsx  browser.ts  constants.ts  fileType.ts  icons.ts  index.ts  jupyterlab-h5web.ts  mimeplugin.tsx  models.ts  utils.ts  widget.ts  widget.tsx
style/: base.css  index.css
